--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -1,8 +1,14 @@
 //Widescreen
 @include mediaXL {
+  .projects {
+    grid-template-columns: repeat(4, 1);
+  }
 }
 //Desktops and latops
 @include mediaLg {
+  .projects {
+    grid-template-columns: repeat(3, 1);
+  }
 }
 //Tablets & Small Laptops
 @include mediaMd {
@@ -64,10 +70,17 @@
 
     grid-auto-columns: 1fr;
   }
+
+  .projects {
+    grid-template-columns: repeat(2, 1);
+  }
 }
 //Smartphones
 @include mediaSm {
   main#home h1 {
     margin-top: 10vh;
+  }
+  .projects {
+    grid-template-columns: 1fr;
   }
 }
